Import of ROBM/HTML-GenerateUtil-1.03 from CPAN.
gitpan-cpan-distribution: HTML-GenerateUtil
gitpan-cpan-version:      1.03
gitpan-cpan-path:         ROBM/HTML-GenerateUtil-1.03.tar.gz
gitpan-cpan-author:       ROBM
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -11,3 +11,7 @@ Revision history for Perl extension HTML::GenerateUtil.
 	- remove dependence on 5.8.4
   - move :consts import to first
 
+1.03  Thu Jun 14 17:12:00 2004
+	- add "leaveknown" entities option
+  - add "closetag" option
+
