--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension HTML::GenerateUtil.
 
+1.10  Mon May 22 14:51:00 2009
+  - Allow single argument version of escape_html()
+
 1.09  Thu Mar 13 16:00:00 2008
   - Add an AUTOLOAD method which calls generate_tag
 
