--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-HTML-GenerateUtil version 1.11
+HTML-GenerateUtil version 1.20
 ==============================
 
 Provides a number of functions that make generating HTML output
@@ -15,8 +15,8 @@ To install this module type the following:
 
 COPYRIGHT AND LICENCE
 
-Copyright (C) 2004-2011 by Opera Software Australia Pty Ltd
+Copyright (C) 2004-2014 by FastMail Pty Ltd
 
 This library is free software; you can redistribute it and/or modify
-it under the same terms as Perl itself. 
+it under the same terms as Perl itself.
 
